--- a/src/app-layouts/navbar/layouts/navbar-one/css/base.module.css
+++ b/src/app-layouts/navbar/layouts/navbar-one/css/base.module.css
@@ -5,7 +5,7 @@
 @import "@dealers-dir/style.css";
 
 .header-wrapper {
-  @apply fixed inset-x-0 top-0 z-50 bg-black/20 text-white w-full;
+  @apply sticky inset-x-0 top-0 z-50 bg-black/20 text-white w-full;
 }
 
 .header-wrapper.home {
